--- a/src/css/ChosenImage.css
+++ b/src/css/ChosenImage.css
@@ -56,3 +56,25 @@
     margin: 0 auto;
   }
 }
+
+.download-btn {
+  display: block;
+  margin: 0 auto;
+  margin-top: 3rem;
+  background-color: #1565c0;
+  padding: 0.75rem;
+  width: 50%;
+  color: #fff;
+  text-transform: uppercase;
+  transition: all 0.5s;
+  border-radius: 0.25rem;
+}
+
+.download-btn:hover {
+  background-color: #0d47a1;
+  color: whitesmoke;
+}
+
+.download-icon {
+  color: #fff;
+}
